--- a/checkpoint/Capstone Data.Rmd
+++ b/checkpoint/Capstone Data.Rmd
@@ -135,10 +135,10 @@ theme_set(theme_minimal())
 ```
 
 ```{r}
-grocery <- read_csv(here("ethnic","Data","grocery.csv"))
-schools <- read_csv(here("ethnic","Data","schools.csv"))
-green_space <- read_csv(here("ethnic","Data","parks.csv"))
-evictions <- read_csv(here("ethnic","Data","evictions.csv"))
+grocery <- read_csv(here("ethnic","Data","grocery.csv")) # coordinate
+schools <- read_csv(here("ethnic","Data","schools.csv")) # censuse
+green_space <- read_csv(here("ethnic","Data","parks.csv")) # coordinate
+evictions <- read_csv(here("ethnic","Data","evictions.csv")) # census
 access_income <- read_csv(here("ethnic","Data","transit_income.csv"))
 demographics <- read_csv(here("ethnic","Data","demographics.csv"))
 rental_price <- read_csv(here("ethnic","Data","median_rent.csv"))
@@ -253,7 +253,15 @@ library(sf)
 
 # read shapefiles
 boundary_nyc <- st_read(here("ethnic", "Data", "zip_code_boundaries","ZIP_CODE_040114.shp"), quiet = TRUE)
-transit_points <- read_csv(here("transit","Data","ridership_points.csv"))
+transit_points <- read_csv(here("transit","ridership_points.csv"))%>%
+  separate(Position, into=c("Point", "latitude", "longitude"), " ") %>%
+  mutate(latitude = str_remove_all(latitude, "[(]"),
+         longitude = str_remove_all(longitude, "[)]"),
+         ) %>%
+  dplyr::select(-c(Point)) %>% mutate(latitude=as.numeric(latitude),
+         longitude = as.numeric(longitude))
+  
+  
 ```
 
 ```{r}
